[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-calculator"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Dave Pearson", email = "davep@textualize.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "textual"
]

[project.urls]
Documentation = "https://github.com/Textualize/textual-calculator-hatch#readme"
Issues = "https://github.com/Textualize/textual-calculator-hatch/issues"
Source = "https://github.com/Textualize/textual-calculator-hatch"

[project.scripts]
calculator = "textual_calculator.calculator:run"

[tool.hatch.version]
path = "src/textual_calculator/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/textual_calculator tests}"

[tool.coverage.run]
source_pkgs = ["textual_calculator", "tests"]
branch = true
parallel = true
omit = [
  "src/textual_calculator/__about__.py",
]

[tool.coverage.paths]
textual_calculator = ["src/textual_calculator", "*/textual-calculator/src/textual_calculator"]
tests = ["tests", "*/textual-calculator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
